# sixaxispairer

./: CMakeLists.txt  CMakePresets.json  README-BUILD.md  README.md  build-direct-final.bat  build-direct-fixed.bat  build-direct-fixed2.bat  build-direct-fixed3.bat  build-direct.bat  build.bat  controller_connection.c  controller_connection.h  controller_differences.md  controller_info.h  direct-build.bat  enumerate_controllers  enumerate_controllers.c  main.c  platform_compat.h  ui.c  ui.h
CMakeModules/: FindHIDAPI.cmake  Findhidapi.cmake
temp/: controller_connection.c  controller_connection.h  controller_info.c  controller_info.h  mac_utils.c  mac_utils.h  main.c  ui.c
